tests/good/tests/bad/testConstReassign.grc
// Error: Cannot assign to constant variable 'myConst'
const myConst := "Immutable"
myConst = "Try to change" 